--- a/src/ProductCard.css
+++ b/src/ProductCard.css
@@ -10,52 +10,57 @@
     padding: 16px;
     width: 300px;
     background-color: #ffffff;
-    transition: box-shadow 0.3s ease, transform 0.3s ease; /* Add transform transition */
-    text-align: center; /* Center the content within the card */
-  }
-  
-  .product-card:hover {
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+    /* Add transform transition */
+    text-align: center;
+    /* Center the content within the card */
+}
+
+.product-card:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transform: translateY(-5px); /* Move the card up by 5px */
-  }
-  
-  .product-image {
+    transform: translateY(-5px);
+    /* Move the card up by 5px */
+}
+
+.product-image {
     width: 100%;
     height: 200px;
     overflow: hidden;
     border-radius: 8px;
     margin-bottom: 16px;
-    transition: transform 0.3s ease; /* Add transform transition */
-  }
-  
-  .product-image img {
+    transition: transform 0.3s ease;
+    /* Add transform transition */
+}
+
+.product-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
-  
-  .product-card:hover .product-image {
-    transform: translateY(-5px); /* Move the image up by 5px */
-  }
-  
-  .product-name {
+}
+
+.product-card:hover .product-image {
+    transform: translateY(-5px);
+    /* Move the image up by 5px */
+}
+
+.product-name {
     font-size: 1.2rem;
     font-weight: 500;
     margin-bottom: 8px;
-  }
-  
-  .product-price {
+}
+
+.product-price {
     font-size: 1rem;
     color: #555;
-  }
-  
-  .product-description {
+}
+
+.product-description {
     font-size: 0.9rem;
     color: #777;
     margin-bottom: 16px;
-  }
-  
-  .product-button {
+}
+
+.product-button {
     padding: 8px 16px;
     font-size: 0.9rem;
     background-color: #007bff;
@@ -64,9 +69,8 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
-  
-  .product-button:hover {
+}
+
+.product-button:hover {
     background-color: #0056b3;
-  }
-  
+}
